--- a/VideoPoker/VideoPoker.csproj
+++ b/VideoPoker/VideoPoker.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Card.cs" />
     <Compile Include="CardDeck.cs" />
     <Compile Include="Dealer.cs" />
+    <Compile Include="HandDisplay.cs" />
     <Compile Include="HandEvaluator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
